--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^22.4.4",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
