--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "jest": "^22.4.4",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "polished": "^1.9.2",
-    "react-dom": "^16.4.1",
     "storybook-addon-a11y": "^3.1.9",
     "storybook-react-router": "^1.0.1",
     "style-loader": "^0.21.0",
@@ -38,9 +39,8 @@
   },
   "dependencies": {
     "material-icons": "^0.2.3",
-    "react": "^16.5.1",
-    "react-input-mask": "^2.0.4",
     "react-md-spinner": "^0.3.0",
+    "react-text-mask": "^5.4.3",
     "react-transition-group": "^2.4.0"
   },
   "scripts": {
