--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ucd-lib/lib-ui",
+  "name": "@ucd-libops/lib-ui",
   "version": "1.0.0",
   "description": "UCD Library React component library",
   "main": "dist/index.js",
@@ -28,9 +28,9 @@
     "jest": "^22.4.4",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
+    "polished": "^1.9.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "polished": "^1.9.2",
     "storybook-addon-a11y": "^3.1.9",
     "storybook-react-router": "^1.0.1",
     "style-loader": "^0.21.0",
